--- a/Mod Projects/HakureiReimu/HakureiReimu.csproj
+++ b/Mod Projects/HakureiReimu/HakureiReimu.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <AssemblyName>HakureiReimu202411101315</AssemblyName>
+    <AssemblyName>HakureiReimu2024112021248</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -405,7 +405,7 @@
 <!-- Extra Reference End-->
   </ItemGroup>
   
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            <!-- Compile ItemGroup Start-->
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        <!-- Compile ItemGroup Start-->
   <ItemGroup>
     <Compile Include="HakureiReimu_ModDefinition.cs" />
     <Compile Include="HakureiReimu_ModItemKeys.cs" />
@@ -439,6 +439,7 @@
     <Compile Include="Buff\B_HakureiReimu_F_P.cs" />
     <Compile Include="Buff\B_HakureiReimu_F_P_1.cs" />
     <Compile Include="Buff\B_Musoutensei_Flandre_0.cs" />
+    <Compile Include="Buff\B_Musoutensei_Reisen_0.cs" />
     <Compile Include="Buff\B_Musoutensei_Satsuki_0.cs" />
     <Compile Include="Buff\B_Musoutensei_Youmu_0.cs" />
     <Compile Include="Character\P_HakureiReimu.cs" />
@@ -490,7 +491,9 @@
     <Compile Include="Skill\S_HakureiReimu_F_9_5.cs" />
     <Compile Include="Skill\S_HakureiReimu_F_LucyD.cs" />
     <Compile Include="Skill\S_Musoutensei_Flandre.cs" />
+    <Compile Include="Skill\S_Musoutensei_Inaba.cs" />
     <Compile Include="Skill\S_Musoutensei_Kaguya.cs" />
+    <Compile Include="Skill\S_Musoutensei_Mokou.cs" />
     <Compile Include="Skill\S_Musoutensei_Reisen.cs" />
     <Compile Include="Skill\S_Musoutensei_Remilia.cs" />
     <Compile Include="Skill\S_Musoutensei_Sakuya.cs" />
