--- a/Mod Projects/MinamiRio/MinamiRio.csproj
+++ b/Mod Projects/MinamiRio/MinamiRio.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -406,13 +406,15 @@
     <Reference Include="MonoMod.Utils">
       <HintPath>..\..\MinamiRio\Assemblies\MonoMod.Utils.dll</HintPath>
     </Reference>
-<!-- Extra Reference End-->
+    <!-- Extra Reference End-->
   </ItemGroup>
-                                                                                                                                                                                                                                                                                                                    <!-- Compile ItemGroup Start-->
+  <!-- Compile ItemGroup Start-->
   <ItemGroup>
     <Compile Include="BattleCharDamagePatch.cs" />
     <Compile Include="BV_MinamiRio_P.cs" />
     <Compile Include="Characterget_statPatch.cs" />
+    <Compile Include="SkillToolTipPatch.cs" />
+    <Compile Include="FieldStorePatch.cs" />
     <Compile Include="ForgeTreePlugin.cs" />
     <Compile Include="MinamiRio_ModDefinition.cs" />
     <Compile Include="MinamiRio_ModItemKeys.cs" />
@@ -446,6 +448,7 @@
     <Compile Include="Skill\S_MinamiRio_7.cs" />
     <Compile Include="Skill\S_MinamiRio_LucyD.cs" />
     <Compile Include="Skill\S_MinamiRio_Rare_2.cs" />
+    <Compile Include="StageChestEnemyPatch.cs" />
   </ItemGroup>
   <!-- Compile ItemGroup End-->
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
