--- a/Mod Projects/IzayoiSakuya/IzayoiSakuya.csproj
+++ b/Mod Projects/IzayoiSakuya/IzayoiSakuya.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <AssemblyName>IzayoiSakuya2025112210336</AssemblyName>
+    <AssemblyName>IzayoiSakuya202511413720</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -384,7 +384,7 @@
     <!-- Extra Reference Start-->
 <!-- Extra Reference End-->
   </ItemGroup>
-                                                                                                <!-- Compile ItemGroup Start-->
+                                                                                                                            <!-- Compile ItemGroup Start-->
   <ItemGroup>
     <Compile Include="BV_Sakuya_TKnife.cs" />
     <Compile Include="IzayoiSakuya_ModDefinition.cs" />
@@ -401,6 +401,7 @@
     <Compile Include="Buff\B_Sakuya_5_new.cs" />
     <Compile Include="Buff\B_Sakuya_6.cs" />
     <Compile Include="Buff\B_Sakuya_6_0.cs" />
+    <Compile Include="Buff\B_Sakuya_8.cs" />
     <Compile Include="Buff\B_Sakuya_Knife.cs" />
     <Compile Include="Buff\B_Sakuya_LucyD_2.cs" />
     <Compile Include="Buff\B_Sakuya_P.cs" />
