--- a/Mod Projects/RemiliaScarlet/RemiliaScarlet.csproj
+++ b/Mod Projects/RemiliaScarlet/RemiliaScarlet.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <AssemblyName>RemiliaScarlet202511503211</AssemblyName>
+    <AssemblyName>RemiliaScarlet202512412648</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -382,7 +382,7 @@
     </Reference>
   </ItemGroup>
   
-                                                                                                                                                                                                                                      <!-- Compile ItemGroup Start-->
+                                                                                                                                                                                                                                                    <!-- Compile ItemGroup Start-->
   <ItemGroup>
     <Compile Include="RemiliaScarlet_ModItemKeys.cs" />
     <Compile Include="Buff\B_RemiliaScarlet_0.cs" />
@@ -395,6 +395,8 @@
     <Compile Include="Buff\B_RemiliaScarlet_7.cs" />
     <Compile Include="Buff\B_RemiliaScarlet_LucyD.cs" />
     <Compile Include="Buff\B_RemiliaScarlet_P.cs" />
+    <Compile Include="Buff\B_RemiliaScarlet_Rare12.cs" />
+    <Compile Include="Buff\B_RemiliaScarlet_Rare12_BuffEx.cs" />
     <Compile Include="Character\P_RemiliaScarlet.cs" />
     <Compile Include="Item_Equip\Remilia_Parasol.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
