--- a/ZhaNanBei3rd/Scripts/ZhaNanBei3rd.csproj
+++ b/ZhaNanBei3rd/Scripts/ZhaNanBei3rd.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <AssemblyName>ZhaNanBei3rd20252715128</AssemblyName>
+    <AssemblyName>ZhaNanBei3rd202529204806</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -426,13 +426,14 @@
     </Reference>
 <!-- Extra Reference End-->
   </ItemGroup>
-                                                                  <!-- Compile ItemGroup Start-->
+                <!-- Compile ItemGroup Start-->
   <ItemGroup>
     <Compile Include="NotExpertPlusMod.cs" />
     <Compile Include="SpeedRunTimer_Plugin.cs" />
     <Compile Include="ZhaNanBei3rd_ModDefinition.cs" />
     <Compile Include="ZhaNanBei3rd_ModItemKeys.cs" />
     <Compile Include="ZhaNanBei3rd_Plugin.cs" />
+    <Compile Include="Item_Passive\blackRabbit.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
