--- a/Mod Projects/Yuyuko/Yuyuko.csproj
+++ b/Mod Projects/Yuyuko/Yuyuko.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -385,10 +385,11 @@
       <Private>False</Private>
     </Reference>
     <!-- Extra Reference Start-->
-<!-- Extra Reference End-->
+    <!-- Extra Reference End-->
   </ItemGroup>
-                                                                                                                                                                                                            <!-- Compile ItemGroup Start-->
+  <!-- Compile ItemGroup Start-->
   <ItemGroup>
+    <Compile Include="Buff\B_YuyukoF_6.cs" />
     <Compile Include="BV_YuyukoF_P.cs" />
     <Compile Include="Yuyuko_ModDefinition.cs" />
     <Compile Include="Yuyuko_ModItemKeys.cs" />
