--- a/Mod Projects/Yuyuko/Yuyuko.csproj
+++ b/Mod Projects/Yuyuko/Yuyuko.csproj
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <AssemblyName>Yuyuko202521004428</AssemblyName>
+    <AssemblyName>Yuyuko202521104319</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -385,16 +385,16 @@
       <Private>False</Private>
     </Reference>
     <!-- Extra Reference Start-->
-    <!-- Extra Reference End-->
+<!-- Extra Reference End-->
   </ItemGroup>
-  <!-- Compile ItemGroup Start-->
+                        <!-- Compile ItemGroup Start-->
   <ItemGroup>
-    <Compile Include="Buff\B_YuyukoF_6.cs" />
     <Compile Include="BV_YuyukoF_P.cs" />
     <Compile Include="Yuyuko_ModDefinition.cs" />
     <Compile Include="Yuyuko_ModItemKeys.cs" />
     <Compile Include="Yuyuko_Plugin.cs" />
     <Compile Include="Buff\B_YuyukoF_1.cs" />
+    <Compile Include="Buff\B_YuyukoF_6.cs" />
     <Compile Include="Buff\B_YuyukoF_8.cs" />
     <Compile Include="Buff\B_YuyukoF_9.cs" />
     <Compile Include="Buff\B_YuyukoF_Butterfly_M.cs" />
@@ -404,6 +404,7 @@
     <Compile Include="Buff\B_YuyukoF_P_1.cs" />
     <Compile Include="Buff\B_YuyukoF_P_2.cs" />
     <Compile Include="Buff\B_YuyukoF_P_3.cs" />
+    <Compile Include="Buff\B_YuyukoF_Rare_2.cs" />
     <Compile Include="Buff\B_YuyukoF_Rare_3.cs" />
     <Compile Include="Buff\B_YuyukoF_Rare_3_1.cs" />
     <Compile Include="Character\P_YuyukoF.cs" />
