--- a/Mod Projects/Yuyuko/Yuyuko.csproj
+++ b/Mod Projects/Yuyuko/Yuyuko.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <AssemblyName>Yuyuko202521933028</AssemblyName>
+    <AssemblyName>Yuyuko202522104142</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -412,12 +412,14 @@
     <!-- Extra Reference Start-->
 <!-- Extra Reference End-->
   </ItemGroup>
-                                                                                <!-- Compile ItemGroup Start-->
+                                                                                                                                <!-- Compile ItemGroup Start-->
   <ItemGroup>
     <Compile Include="BV_YuyukoF_P.cs" />
     <Compile Include="Yuyuko_ModDefinition.cs" />
     <Compile Include="Yuyuko_ModItemKeys.cs" />
     <Compile Include="Yuyuko_Plugin.cs" />
+    <Compile Include="Buff\B_E_YuyukoF_0.cs" />
+    <Compile Include="Buff\B_E_YuyukoF_1.cs" />
     <Compile Include="Buff\B_GhostF_1.cs" />
     <Compile Include="Buff\B_GhostF_2.cs" />
     <Compile Include="Buff\B_GhostF_P_0.cs" />
@@ -448,6 +450,9 @@
     <Compile Include="Enemy\Boss_Ghost.cs" />
     <Compile Include="Enemy\Boss_Ghost_Youmu.cs" />
     <Compile Include="Enemy\Boss_Youmu.cs" />
+    <Compile Include="Item_Equip\E_YuyukoF_0.cs" />
+    <Compile Include="Item_Equip\E_YuyukoF_1.cs" />
+    <Compile Include="Item_Passive\R_YuyukoF_0.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
@@ -481,6 +486,8 @@
     <Compile Include="Skill\S_YuyukoF_Rare_1_0.cs" />
     <Compile Include="Skill\S_YuyukoF_Rare_2.cs" />
     <Compile Include="Skill\S_YuyukoF_Rare_3.cs" />
+    <Compile Include="SkillExtended\SE_YuyukoF_C_0.cs" />
+    <Compile Include="SkillExtended\SE_YuyukoF_C_1.cs" />
   </ItemGroup>
   <!-- Compile ItemGroup End-->
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
