--- a/Mod Projects/Squall/Squall.csproj
+++ b/Mod Projects/Squall/Squall.csproj
@@ -3,14 +3,18 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <AssemblyName>Squall202522404138</AssemblyName>
+    <AssemblyName>Squall202522511741</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <ReferencePath>H:/SteamLibrary/steamapps/common/Chrono Ark/ChronoArk_Data/Managed</ReferencePath>
+    <ProjectGuid>{24530924-6395-4300-84E3-99B003E519FC}</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0Harmony">
+      <HintPath>I:\11\Assemblies\0Harmony.dll</HintPath>
+    </Reference>
     <Reference Include="Accessibility">
       <Private>False</Private>
     </Reference>
@@ -26,8 +30,26 @@
     <Reference Include="DOTween">
       <Private>False</Private>
     </Reference>
+    <Reference Include="Mono.Cecil">
+      <HintPath>I:\11\Assemblies\Mono.Cecil.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil.Mdb">
+      <HintPath>I:\11\Assemblies\Mono.Cecil.Mdb.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil.Pdb">
+      <HintPath>I:\11\Assemblies\Mono.Cecil.Pdb.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil.Rocks">
+      <HintPath>I:\11\Assemblies\Mono.Cecil.Rocks.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Security">
       <Private>False</Private>
+    </Reference>
+    <Reference Include="MonoMod.RuntimeDetour">
+      <HintPath>I:\11\Assemblies\MonoMod.RuntimeDetour.dll</HintPath>
+    </Reference>
+    <Reference Include="MonoMod.Utils">
+      <HintPath>I:\11\Assemblies\MonoMod.Utils.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <Private>False</Private>
@@ -383,8 +405,7 @@
     <!-- Extra Reference Start-->
 <!-- Extra Reference End-->
   </ItemGroup>
-  
-                                                                                                                                    <!-- Compile ItemGroup Start-->
+        <!-- Compile ItemGroup Start-->
   <ItemGroup>
     <Compile Include="Squall_ModDefinition.cs" />
     <Compile Include="Squall_ModItemKeys.cs" />
@@ -397,6 +418,7 @@
     <Compile Include="Buff\B_Squall_LucyD.cs" />
     <Compile Include="Buff\B_Squall_P.cs" />
     <Compile Include="Buff\B_Squall_Rare_1.cs" />
+    <Compile Include="Buff\B_Squall_Rare_1_0.cs" />
     <Compile Include="Buff\B_Squall_Rare_2.cs" />
     <Compile Include="Buff\B_Squall_Taunt.cs" />
     <Compile Include="Character\P_Squall.cs" />
