--- a/Mod Projects/Squall/Squall.csproj
+++ b/Mod Projects/Squall/Squall.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <AssemblyName>Squall2025225235847</AssemblyName>
+    <AssemblyName>Squall202522802306</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -405,11 +405,12 @@
     <!-- Extra Reference Start-->
 <!-- Extra Reference End-->
   </ItemGroup>
-            <!-- Compile ItemGroup Start-->
+                        <!-- Compile ItemGroup Start-->
   <ItemGroup>
     <Compile Include="Squall_ModDefinition.cs" />
     <Compile Include="Squall_ModItemKeys.cs" />
     <Compile Include="Squall_Plugin.cs" />
+    <Compile Include="Buff\B_Sqaull_6.cs" />
     <Compile Include="Buff\B_Sqaull_WeakTaunt.cs" />
     <Compile Include="Buff\B_Squall_0.cs" />
     <Compile Include="Buff\B_Squall_1.cs" />
