--- a/Mod Projects/HiHouClab/HiHouClab.csproj
+++ b/Mod Projects/HiHouClab/HiHouClab.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <AssemblyName>HiHouClab20253300957</AssemblyName>
+    <AssemblyName>HiHouClab20253522727</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -384,13 +384,14 @@
 <!-- Extra Reference End-->
   </ItemGroup>
   
-                      <!-- Compile ItemGroup Start-->
+                          <!-- Compile ItemGroup Start-->
   <ItemGroup>
     <Compile Include="HiHouClab_ModDefinition.cs" />
     <Compile Include="HiHouClab_ModItemKeys.cs" />
     <Compile Include="HiHouClab_Plugin.cs" />
     <Compile Include="Buff\B_Maribel_Rare_3.cs" />
     <Compile Include="Buff\B_Renko_Rare_3.cs" />
+    <Compile Include="Character\P_UsamiRenko.cs" />
     <Compile Include="Skill\S_Hihou_Rare_3.cs" />
     <Compile Include="Skill\S_Maribel_Rare_3.cs" />
     <Compile Include="Skill\S_Renko_Rare_3.cs" />
