爱丽丝-混乱攻击

--- a/Mod Projects/VillageAlice/VillageAlice.csproj
+++ b/Mod Projects/VillageAlice/VillageAlice.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -406,10 +406,12 @@
       <Private>False</Private>
     </Reference>
     <!-- Extra Reference Start-->
-<!-- Extra Reference End-->
+    <!-- Extra Reference End-->
   </ItemGroup>
-          <!-- Compile ItemGroup Start-->
+  <!-- Compile ItemGroup Start-->
   <ItemGroup>
+    <Compile Include="ChaosDamagePatch.cs" />
+    <Compile Include="DreamLandPatch.cs" />
     <Compile Include="VillageAlice_ModDefinition.cs" />
     <Compile Include="VillageAlice_ModItemKeys.cs" />
     <Compile Include="VillageAlice_Plugin.cs" />
